AC_INIT()

PWD=`pwd`
TOPDIR=${PWD}/..
AC_SUBST(TOPDIR)

AC_CONFIG_AUX_DIR(${PWD})

if test -d ${TOPDIR}/mkf ; then
	MKF_LIBS="${TOPDIR}/mkf/lib/libmkf.la"
	MKF_CFLAGS="-I${TOPDIR}/mkf/include"
else
	MKF_LIBS="-lmkf"
fi
AC_SUBST(MKF_LIBS)
AC_SUBST(MKF_CFLAGS)

if test -d ${TOPDIR}/kiklib ; then
	KIK_LIBS="${TOPDIR}/kiklib/src/libkik.la"
	KIK_CFLAGS="-I${TOPDIR}/kiklib/include"
else
	KIK_LIBS="-lkik"
fi
AC_SUBST(KIK_LIBS)
AC_SUBST(KIK_CFLAGS)

AC_PROG_CC

AC_PROG_INSTALL

AC_ARG_WITH(libtool,
	[  --with-libtool          libtool path[without]],
	libtool=$with_libtool)
if test "${libtool}" != "" ; then
	LIBTOOL=${libtool}
else
	AM_PROG_LIBTOOL
	LIBTOOL=${PWD}/libtool
fi
AC_SUBST(LIBTOOL)

AC_CHECK_LIB(dl,dlopen,DL_LIBS=-ldl)
AC_SUBST(DL_LIBS)

AC_CHECK_LIB(xpg4,setlocale,XPG4_LIBS=-lxpg4)
AC_SUBST(XPG4_LIBS)

AC_PATH_XTRA

AC_MSG_CHECKING(for pty/tty type)
AC_CACHE_VAL(kik_cv_pty,[
if test -c /dev/ptmx -a -d /dev/pts ; then
	kik_cv_pty="streams"
else
	kik_cv_pty="bsd"
fi])
AC_MSG_RESULT($kik_cv_pty)
if test "${kik_cv_pty}" = "streams" ; then
	PTY_CFLAGS="-DPTY_STREAMS"
else
	if test "${kik_cv_pty}" = "bsd" ; then
		PTY_CFLAGS="-DPTY_BSD"
	fi
fi
AC_SUBST(PTY_CFLAGS)

AC_ARG_ENABLE(debug,
	[  --enable-debug          debug[disabled]],
	debug=$enable_debug)
if test "$debug" = "yes" ; then
	DEB_CFLAGS="-DDEBUG -DKIK_DEBUG"
fi
AC_SUBST(DEB_CFLAGS)
AC_SUBST(OPT_CFLAGS)

AC_ARG_ENABLE(fribidi,
	[  --enable-fribidi           bidi[disabled]],
	fribidi=$enable_fribidi)
if test "$fribidi" = "yes" ; then
	AC_CHECK_LIB(fribidi,fribidi_log2vis,
		[
		FRIBIDI_CFLAGS="`glib-config --cflags` -DUSE_FRIBIDI"
		FRIBIDI_LIBS="`glib-config --libs` -lfribidi"
		],,`glib-config --libs`)
fi
AC_SUBST(FRIBIDI_CFLAGS)
AC_SUBST(FRIBIDI_LIBS)
	
AC_ARG_ENABLE(imlib,
	[  --enable-imlib          imlib[disabled]],
	imlib=$enable_imlib)
if test "$imlib" = "yes" ; then
	AC_CHECK_PROG(imlib_config,imlib-config,yes)
	if test "$imlib_config" != "" ; then
		IMLIB_CFLAGS="-DUSE_IMLIB `imlib-config --cflags`"
		IMLIB_LIBS='`imlib-config --libs`'
	fi
fi
AC_SUBST(IMLIB_CFLAGS)
AC_SUBST(IMLIB_LIBS)

AC_ARG_ENABLE(anti_alias,
	[  --enable-anti-alias     anti alias[disabled]],
	anti_alias=$enable_anti_alias)
if test "$anti_alias" = "yes" ; then
	AA_CFLAGS="-DANTI_ALIAS"
	AA_LIBS="-lXft"
fi
AC_SUBST(AA_CFLAGS)
AC_SUBST(AA_LIBS)
AC_SUBST(PROG)

AC_ARG_ENABLE(ucs4,
	[  --enable-ucs4           ucs4[disabled]],
	ucs4=$enable_ucs4)
if test "$ucs4" = "yes" ; then
	UCS4_CFLAGS="-DUSE_UCS4"
fi
AC_SUBST(UCS4_CFLAGS)

AC_CHECK_PROG(gtk_config,gtk-config,yes)
if test "$gtk_config" = "yes" ; then
	AC_PATH_PROG(GTK_CONFIG,gtk-config,/usr/local/bin/gtk-config,$PATH)
	MAKE_DIRS="${TOPDIR}/tool/mlconfig ${MAKE_DIRS}"
else
	# for Daichi Goto-san:)
	AC_CHECK_PROG(gtk_config,gtk12-config,yes)
	if test "$gtk_config" = "yes" ; then
		AC_PATH_PROG(GTK_CONFIG,gtk12-config,/usr/X11R6/bin/gtk12-config,$PATH)
		MAKE_DIRS="${TOPDIR}/tool/mlconfig ${MAKE_DIRS}"
	fi
fi
AC_SUBST(GTK_CONFIG)

MAKE_DIRS="${TOPDIR}/src ${TOPDIR}/man ${TOPDIR}/etc ${TOPDIR}/contrib/scrollbar/sample ${MAKE_DIRS}"
AC_SUBST(MAKE_DIRS)

AC_OUTPUT(Makefile ../src/Makefile ../tool/mlconfig/Makefile ../man/Makefile ../etc/Makefile ../contrib/scrollbar/sample/Makefile)
