AC_INIT()

PWD=`pwd`
TOPDIR=${PWD}/..
AC_SUBST(TOPDIR)

AC_CONFIG_AUX_DIR(${PWD})

if test -d ${TOPDIR}/mkf ; then
	MKF_LIBS="${TOPDIR}/mkf/lib/libmkf.la"
	MKF_CFLAGS="-I${TOPDIR}/mkf/include"
else
	MKF_LIBS="-lmkf"
fi
AC_SUBST(MKF_LIBS)
AC_SUBST(MKF_CFLAGS)

if test -d ${TOPDIR}/kiklib ; then
	KIK_LIBS="${TOPDIR}/kiklib/src/libkik.la"
	KIK_CFLAGS="-I${TOPDIR}/kiklib/include"
else
	KIK_LIBS="-lkik"
fi
AC_SUBST(KIK_LIBS)
AC_SUBST(KIK_CFLAGS)

AC_PROG_CC

AC_PROG_INSTALL

AC_ARG_WITH(libtool,
	[  --with-libtool          libtool path[without]],
	libtool=$with_libtool)
if test "${libtool}" != "" ; then
	LIBTOOL=${libtool}
else
	AM_PROG_LIBTOOL
	LIBTOOL=${PWD}/libtool
fi
AC_SUBST(LIBTOOL)

AC_CHECK_LIB(dl,dlopen,DL_LIBS=-ldl)
AC_SUBST(DL_LIBS)

AC_CHECK_LIB(socket,connect,SOCK_LIBS=-lsocket)
AC_SUBST(SOCK_LIBS)

AC_PATH_XTRA

AC_ARG_ENABLE(debug,
	[  --enable-debug          debug[disabled]],
	debug=$enable_debug)
if test "$debug" = "yes" ; then
	DEB_CFLAGS="-DDEBUG -DKIK_DEBUG"
fi
AC_SUBST(DEB_CFLAGS)
AC_SUBST(OPT_CFLAGS)

AC_ARG_ENABLE(fribidi,
	[  --enable-fribidi           bidi[disabled]],
	fribidi=$enable_fribidi)
if test "$fribidi" = "yes" ; then
	AC_CHECK_PROG(fribidi_config,fribidi-config,yes)
	if test "$fribidi_config" = "yes" ; then
		FRIBIDI_CFLAGS="`fribidi-config --cflags` -DUSE_FRIBIDI"
		FRIBIDI_LIBS="`fribidi-config --libs`"
	fi
fi
AC_SUBST(FRIBIDI_CFLAGS)
AC_SUBST(FRIBIDI_LIBS)
	
AC_ARG_ENABLE(imlib,
	[  --enable-imlib          imlib[disabled]],
	imlib=$enable_imlib)
if test "$imlib" = "yes" ; then
	AC_CHECK_PROG(imlib_config,imlib-config,yes)
	if test "$imlib_config" = "yes" ; then
		IMLIB_CFLAGS="`imlib-config --cflags` -DUSE_IMLIB"
		IMLIB_LIBS="`imlib-config --libs`"
	fi
fi
AC_SUBST(IMLIB_CFLAGS)
AC_SUBST(IMLIB_LIBS)

AC_ARG_ENABLE(anti_alias,
	[  --enable-anti-alias     anti alias[disabled]],
	anti_alias=$enable_anti_alias)
if test "$anti_alias" = "yes" ; then
	AA_CFLAGS="-DANTI_ALIAS"
	AA_LIBS="-lXft"
fi
AC_SUBST(AA_CFLAGS)
AC_SUBST(AA_LIBS)
AC_SUBST(PROG)

AC_ARG_ENABLE(ind,
	[  --enable-ind            libind[disabled]],
	iscii=$enable_ind)
if test "$enable_ind" = "yes" ; then
	AC_CHECK_LIB(ind,indian_init,
		[
		IND_CFLAGS="-DUSE_IND"
		IND_LIBS="-lind"
		])
fi
AC_SUBST(IND_LIBS)
AC_SUBST(IND_CFLAGS)

AC_ARG_ENABLE(utmp,
	[  --enable-utmp           utmp[disabled]],
	utmp=$enable_utmp)
if test "$utmp" = "yes" ; then
	UTMP_CFLAGS="-DUSE_UTMP"
	has_utmp=`grep utmp /etc/group 2>/dev/null`
	if test "$has_utmp" ; then
		INSTALL_OPT="-m 2755 -g utmp"
	else
		INSTALL_OPT="-m 4755 -o root"
	fi
else
	INSTALL_OPT="-m 755"
fi
AC_SUBST(UTMP_CFLAGS)
AC_SUBST(INSTALL_OPT)

AC_ARG_ENABLE(ucs4,
	[  --enable-ucs4           ucs4[disabled]],
	ucs4=$enable_ucs4)
if test "$ucs4" = "yes" ; then
	UCS4_CFLAGS="-DUSE_UCS4"
fi
AC_SUBST(UCS4_CFLAGS)

AC_CHECK_PROG(gtk_config,gtk-config,yes)
if test "$gtk_config" = "yes" ; then
	AC_PATH_PROG(GTK_CONFIG,gtk-config,/usr/local/bin/gtk-config,$PATH)
	MAKE_DIRS="${TOPDIR}/tool/mlconfig ${MAKE_DIRS}"
else
	# for Daichi Goto-san:)
	AC_CHECK_PROG(gtk_config,gtk12-config,yes)
	if test "$gtk_config" = "yes" ; then
		AC_PATH_PROG(GTK_CONFIG,gtk12-config,/usr/X11R6/bin/gtk12-config,$PATH)
		MAKE_DIRS="${TOPDIR}/tool/mlconfig ${MAKE_DIRS}"
	fi
fi
AC_SUBST(GTK_CONFIG)

MAKE_DIRS="${TOPDIR}/src ${TOPDIR}/tool/mlclient ${TOPDIR}/man ${TOPDIR}/etc ${TOPDIR}/scrollbar/sample ${MAKE_DIRS}"
AC_SUBST(MAKE_DIRS)

AC_OUTPUT(Makefile ../src/Makefile ../tool/mlconfig/Makefile ../tool/mlclient/Makefile ../man/Makefile ../etc/Makefile ../scrollbar/sample/Makefile)
