AC_INIT()

PWD=`pwd`
TOPDIR=${PWD}/..
AC_SUBST(TOPDIR)

AC_CONFIG_AUX_DIR(${PWD})

AC_PROG_CC
AC_PROG_INSTALL

AC_ARG_WITH(libtool,
	[ --with-libtool		libtool path[without]],
	libtool=$with_libtool)
if test "${libtool}" != "" ; then
	LIBTOOL=${libtool}
else
	AM_PROG_LIBTOOL
	LIBTOOL=${PWD}/libtool
fi
AC_SUBST(LIBTOOL)

if test -d ${TOPDIR}/kiklib ; then
	KIK_CFLAGS="-I${TOPDIR}/kiklib/include"
fi
AC_SUBST(KIK_CFLAGS)

AC_ARG_ENABLE(debug,
	[ --enable-debug	debug[disabled]],
	debug=$enable_debug)
if test "$debug" = "yes" ; then
	DEB_CFLAGS="-DDEBUG -DKIK_DEBUG"
fi
AC_SUBST(DEB_CFLAGS)

AC_OUTPUT(../lib/Makefile)
