AC_INIT()

is_abs=`echo ${top_srcdir-$srcdir} | sed -n 's/^\/.*/yes/p'`
if test "$is_abs" = "" ; then
	SRC_TOPDIR='${BUILD_TOPDIR}'/autoconf/${top_srcdir-$srcdir}/..
else
	SRC_TOPDIR=${top_srcdir-$srcdir}/..
fi
AC_SUBST(SRC_TOPDIR)

AC_CONFIG_AUX_DIR(${top_srcdir-$srcdir})

AC_PROG_CC
AC_PROG_INSTALL

AC_ARG_WITH(libtool,
	[ --with-libtool		libtool path[without]],
	libtool=$with_libtool)
if test "${libtool}" != "" ; then
	LIBTOOL=${libtool}
else
	AM_PROG_LIBTOOL
	LIBTOOL='${BUILD_TOPDIR}/autoconf/libtool'
fi
AC_SUBST(LIBTOOL)

if test -d ../kiklib ; then
	KIK_CFLAGS='-I${BUILD_TOPDIR}/kiklib/include'
fi
AC_SUBST(KIK_CFLAGS)

AC_ARG_ENABLE(debug,
	[ --enable-debug	debug[disabled]],
	debug=$enable_debug)
if test "$debug" = "yes" ; then
	DEB_CFLAGS="-DDEBUG -DKIK_DEBUG"
fi
AC_SUBST(DEB_CFLAGS)

AC_OUTPUT(Makefile ../lib/Makefile)
